<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_appointment"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/profile"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/name_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/joe_biden"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_appointment"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/logout_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#FF0000"
                android:text="@string/log_out"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="36dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_appointment" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/my_appointments"
                app:layout_constraintBottom_toTopOf="@+id/table_row1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.0" />

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/view">

            </TableLayout>


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="35dp"
                android:background="#858585"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/table_row1" />

            <TableRow
                android:id="@+id/table_row1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="48dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="1dp"
                    android:layout_height="164dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <View
                    android:id="@+id/divider7"
                    android:layout_width="1dp"
                    android:layout_height="164dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/doctor_name"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <View
                    android:id="@+id/divider8"
                    android:layout_width="1dp"
                    android:layout_height="164dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/reason"
                    android:textAlignment="center"
                    android:textColor="#000" />

            </TableRow>

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#4C4C4C"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/book_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:src="?attr/actionModePasteDrawable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:background="#4C4C4C"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/table_row1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="Book Your Appointment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:text="Date :"
                app:layout_constraintStart_toStartOf="@+id/divider13"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="39dp"
                android:text="Time :"
                app:layout_constraintStart_toStartOf="@+id/divider13"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="39dp"
                android:text="Doctor Name :"
                app:layout_constraintStart_toStartOf="@+id/divider13"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:text="Reason :"
                app:layout_constraintStart_toStartOf="@+id/divider13"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="191dp"
                android:layout_height="46dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/spinner_doctor" />

            <View
                android:id="@+id/divider13"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/divider14"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <View
                android:id="@+id/divider15"
                android:layout_width="1dp"
                android:layout_height="729dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_doctor"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <Spinner
                android:id="@+id/spinner_date"
                android:layout_width="156dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="65dp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/spinner_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>